--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,9 +1,11 @@
 .creditCard {
   background-color: #ffffff;
   opacity: 1;
-  background-image: repeating-radial-gradient(circle at 0 0,
+  background-image: repeating-radial-gradient(
+      circle at 0 0,
       transparent 0,
-      #ffffff 40px),
+      #ffffff 40px
+    ),
     repeating-linear-gradient(#c7c9f755, #c7c9f7);
 }
 
@@ -22,12 +24,13 @@
   max-height: 23em;
 }
 
-.mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-text-field__input::-moz-placeholder {
+.mat-mdc-form-field:not(.mat-form-field-no-animations)
+  .mdc-text-field__input::-moz-placeholder {
   transition: opacity 67ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #6267c1;
 }
 
-::ng-deep .mat-mdc-form-field-icon-prefix>mat-icon:nth-child(1) {
+::ng-deep .mat-mdc-form-field-icon-prefix > mat-icon:nth-child(1) {
   color: #6267c1;
 }
 
@@ -42,7 +45,7 @@
   margin-right: auto;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1024px) {
   #header {
     display: none;
   }
